# xrootd-rados-oss

./: CMakeLists.txt  README  xrootd-rados-oss.spec
src/: CMakeLists.txt  RadosOss.cc  RadosOss.hh  RadosOssDefines.hh  RadosOssDir.cc  RadosOssDir.hh  RadosOssFile.cc  RadosOssFile.hh
